--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-        :root {
+:root {
             --primary: #FF6B8B;
             /* Rosa vibrante */
             --secondary: #6BD5E1;
@@ -198,7 +198,38 @@
         .social-icons i {
             color: var(--primary);
         }
-
+.texto-animado {
+    text-transform: uppercase;
+    width: 100vw;
+    position: relative;
+    left: 50%;
+    margin-left: -50vw;
+    overflow: hidden;
+    white-space: nowrap;
+    background-color: hsla(298, 78%, 82%, 0.766);
+    height: 28px;
+    display: flex;
+    align-items: center;
+    z-index: 10;
+}
+.texto-animado p {
+    display: inline-block;
+    font-size: 17px;
+    animation: loopTexto 25s linear infinite; /* velocidade aumentada */
+    font-family: "Bebas Neue", sans-serif;
+    color: black;
+    margin: 0;
+    white-space: nowrap;
+}
+@keyframes loopTexto {
+    0% {
+        transform: translateX(0%);
+    }
+    100% {
+        transform: translateX(-33.33%);
+    }
+}
+/* FIM TEXTO ANIMADO */
         @media (max-width: 768px) {
             .wrapper-geral {
                 width: 95%;
@@ -207,8 +238,8 @@
             .carousel-img {
                 height: 200px;
             }
-
-            h1 {
-                font-size: 2rem;
+            .carousel-img {
+                height: 200px;
+            }   font-size: 2rem;
             }
-        }
+            h1 {                font-size: 2rem;            }        }
