--- a/style/style.css
+++ b/style/style.css
@@ -77,9 +77,10 @@
 
         .carousel-img {
             width: 100%;
-            height: 300px;
-            object-fit: cover;
+            height: 400px;
+            object-fit: cover;      /* Preenche todo o card */
             object-position: center;
+            background: none;       /* Remove fundo branco */
         }
 
         .whatsapp-btn {
@@ -236,10 +237,10 @@
             }
 
             .carousel-img {
-                height: 200px;
+                height: 400px;
             }
-            .carousel-img {
-                height: 200px;
-            }   font-size: 2rem;
+
+            h1 {
+                font-size: 2rem;
             }
-            h1 {                font-size: 2rem;            }        }
+        }
